# pypackage-template

./: .all-contributorsrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  cookiecutter.json  copier.yml  pyproject.toml  renovate.json  requirements.in  requirements.txt  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml  config.yml
.github/workflows/: ci.yml  docs.yml  issue-manager.yml  labels.yml  lint.yml  poetry-upgrade.yml  pre-commit-autoupdate.yml  test.yml  upgrader.yml
hooks/: post_gen_project.py
project/: .all-contributorsrc.jinja  .editorconfig  .gitignore  .gitignore.jinja  .gitpod.yml  .pre-commit-config.yaml  .pre-commit-config.yaml.jinja  .readthedocs.yml  CONTRIBUTING.md.jinja  LICENSE.jinja  README.md.jinja  conftest.py  pyproject.toml.jinja  renovate.json.jinja  setup.py.jinja  {% if is_django_package %}manage.py{% endif %}.jinja  {% if is_django_package %}tox.ini{% endif %}.jinja  {% if open_source_license != 'Not open source' %}LICENSE{% endif %}.jinja
project/.github/: CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.md.jinja  FUNDING.yml.jinja  PULL_REQUEST_TEMPLATE.md.jinja  setup-github.bash
project/.github/ISSUE_TEMPLATE/: 1-bug-report.yml.jinja  1-bug_report.yml.jinja  2-feature-request.yml.jinja  config.yml.jinja
project/.github/workflows/: ci.yml  ci.yml.jinja  copier.yml  issue-manager.yml  labels.yml  poetry-upgrade.yml.jinja  upgrader.yml.jinja
project/docs/: conf.py.jinja  index.md.jinja  installation.md.jinja  usage.md.jinja  {% if is_django_package %}configuration.rst{% endif %}.jinja
project/docs/source/: installation.md.jinja  usage.md.jinja
project/src/{{package_name}}/: main.py  main.py.jinja  {% if has_cli %}__main__.py{% endif %}.jinja  {% if has_cli %}cli.py{% endif %}.jinja  {% if is_django_package %}apps.py{% endif %}.jinja  {% if is_django_package %}conf.py{% endif %}.jinja
project/templates/: .release_notes.md.j2  CHANGELOG.j2  CHANGELOG.md.j2
project/templates/.components/: changelog_header.md.j2  changes.md.j2  first_release.md.j2  macros.md.j2
project/tests/: test_main.py.jinja  {% if has_cli %}test_cli.py{% endif %}.jinja  {% if has_cli %}test_dunder_main.py{% endif %}.jinja  {% if is_django_package %}settings.py{% endif %}.jinja
project/tests/{% if is_django_package %}testapp{% endif %}/: models.py
project/{% if documentation %}docs{% endif %}/: conf.py.jinja  index.md.jinja  installation.md.jinja  usage.md.jinja
tests/: test_bake_project.py  test_generate_project.py  test_hooks.py
{{cookiecutter.project_slug}}/: .all-contributorsrc  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py
{{cookiecutter.project_slug}}/.github/: FUNDING.yml
{{cookiecutter.project_slug}}/.github/workflows/: changelog-generator.yml  ci.yml  docs.yml  draft-release.yml  hacktoberfest.yml  issue-manager.yml  labels.yml  lint.yml  pre-commit-autoupdate.yml  publish-pypi.yml  semantic-release.yml  test.yml
{{cookiecutter.project_slug}}/docs/: requirements.in  requirements.txt
{{cookiecutter.project_slug}}/docs/source/: conf.py  index.md  installation.md  usage.md
{{cookiecutter.project_slug}}/tests/: test_main.py  test_{{cookiecutter.project_slug}}.py
{{project_slug}}/: LICENSE.jinja
{{project_slug}}/.github/workflows/: ci.yml
{{project_slug}}/docs/source/: conf.py.jinja
