[bumpversion]
current_version = {{ cookiecutter.version }}
commit = True
tag = True

[metadata]
name = {{ cookiecutter.project_slug }}
version = attr: {{ cookiecutter.package_name }}.__version__
author = {{ cookiecutter.full_name }}
author_email = {{ cookiecutter.email }}
description = {{ cookiecutter.project_short_description }}
license = {{ cookiecutter.open_source_license }}
license_file = LICENSE
long_description = file:README.md
long_description_content_type = text/markdown
url = https://{{ cookiecutter.project_slug }}.readthedocs.io
project_urls = 
	Source = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}
	Documentation = https://{{ cookiecutter.project_slug }}.readthedocs.io
	Changelog = https://{{ cookiecutter.project_slug }}.readthedocs.io/changelog.html
classifiers = 
	Development Status :: 2 - Pre-Alpha
	Intended Audience :: Developers
	License :: OSI Approved :: {{ cookiecutter.open_source_license }}
	Natural Language :: English
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8

[options]
python_requires = >=3.6
packages = find:
include_package_data = true
zip_safe = false
test_require = 
	pytest>=3

[options.packages.find]
include = 
	{{ cookiecutter.package_name }}
	{{ cookiecutter.package_name }}.*

[bumpversion:file:{{ cookiecutter.package_name }}/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
max-line-length = 88

[aliases]
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']
addopts = -v -Wdefault --cov={{ cookiecutter.package_name }}
testpaths = tests/

[tool:isort]
profile = black
known_first_party = tests,{{ cookiecutter.package_name }}
